docs: add Deployment section to system design architecture
Add comprehensive Deployment section covering:
- Single-instance architecture on Railway PaaS
- Infrastructure requirements (JVM 21, memory allocation, CPU)
- Configuration management (application.conf + env var overrides)
- Packaging and deployment process (Docker multi-stage build)
- Operational considerations (startup, shutdown, monitoring, crash behaviour)

Technical precision improvements:
- Memory calculations qualified as pessimistic envelopes
- JVM baseline range (50-90 MB) reflecting observed variance
- Cleanup cost complexity explicitly stated (O(events × skaters))
- Shutdown behaviour attributed to both platform and application design
- Health endpoint route definition included for auditability

Aligns with ADR 0001 framing (demonstration system targeting 10-15 events).

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>